--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="fond">
-    <h1>Version Rouge</h1>
+    <h1 id= "titreN1">Version Bleue</h1>
 </body>
 </html>
